force-app/main/default/objects/KimbleOne__PurchaseOrder__c/KimbleOne__PurchaseOrder__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Purchase Order</label>
    <nameField>
        <label>Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>