force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__Account__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>PurchaseOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>