force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__AllocatedValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllocatedValue__c</fullName>
    <label>Allocated Value</label>
    <summarizedField>KimbleOne__PurchaseOrderAllocation__c.KimbleOne__AllocatedValue__c</summarizedField>
    <summaryForeignKey>KimbleOne__PurchaseOrderAllocation__c.KimbleOne__PurchaseOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>