force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__EarliestInvoiceItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EarliestInvoiceItemDate__c</fullName>
    <label>Earliest Item Date</label>
    <type>Date</type>
</CustomField>