force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__InvoicedValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicedValue__c</fullName>
    <description>Total value of the invoices generated so far.</description>
    <label>Invoiced Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>