force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__LatestInvoiceItemDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LatestInvoiceItemDate__c</fullName>
    <label>Latest Item Date</label>
    <type>Date</type>
</CustomField>