force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__OrderDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OrderDate__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>