force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__OrderValue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OrderValue__c</fullName>
    <label>Order Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>