force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__OrderValueInvoiced__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__OrderValueInvoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Order Value has been invoiced fully.</description>
    <label>Order Value Invoiced</label>
    <type>Checkbox</type>
</CustomField>