force-app/main/default/objects/KimbleOne__PurchaseOrder__c/fields/KimbleOne__TolerancePercentage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TolerancePercentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Percentage of the Purchase Order total value that the system may over invoice for.</description>
    <label>Z_Obsolete - Tolerance Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>